[gd_scene load_steps=6 format=3 uid="uid://dyuudq0wvwo63"]

[ext_resource type="Texture2D" uid="uid://dbijc61vbk1rw" path="res://Textures/Items/Nature/Swirling tree1.png" id="1_ud0f1"]
[ext_resource type="Script" path="res://Objects/tree.gd" id="1_wcli2"]
[ext_resource type="PackedScene" uid="uid://dxt56k6s6nlte" path="res://Utility/hurt_box.tscn" id="2_o6exw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gyndw"]
size = Vector2(34, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r42p4"]
size = Vector2(54, 94)

[node name="Tree" type="StaticBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 5
collision_mask = 5
script = ExtResource("1_wcli2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 29.5)
shape = SubResource("RectangleShape2D_gyndw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ud0f1")

[node name="TreeHitTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]

[node name="HurtBox" parent="." instance=ExtResource("2_o6exw")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_r42p4")

[node name="DmgLbl" type="Label" parent="HurtBox"]
unique_name_in_owner = true
offset_left = -2.0
offset_top = -17.0
offset_right = 8.0
offset_bottom = 6.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.996078, 0, 0.00392157, 1)
theme_override_font_sizes/font_size = 13

[node name="DmgShowTimer" type="Timer" parent="HurtBox"]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="TreeHitTimer" to="." method="_on_tree_hit_timer_timeout"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="HurtBox/DmgShowTimer" to="." method="_on_dmg_show_timer_timeout"]

[editable path="HurtBox"]
